--- a/index.html
+++ b/index.html
@@ -1,230 +1,224 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>BusyBus</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
-  </head>
-  <body>
+</head>
+
+<body>
     <section class="container">
+
+        <div>
+            <img class="status-bar" src="images/status-bar.png" </div>
+
       <div>
-        <img class="status-bar" src="images/status-bar.png"
-      </div>
-        <section class="navigation">
-
-          <div class="back-arrow">
-            <img class="back-arrow" src="images/back-arrow.png" />
-            </div>
-            <div class="nav-title">
-              <h1>Washington / State</h1>
-            </div>
-        </section>
-
-        <!--<section class="bus-line"> -->
-          <div class="bus-line">
-            <div class="eastbound-bus">
-              <h3>60</h3>
-            </div>
-            <div class="direction">
-              <h3>Eastbound</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>18</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Arrives every 20 minutes</h2>
-            </div>
-            <div class="location">
-              <h3>Randolf / Harbour Dr</h3>
-            </div>
-          </div>
-        <!--</section> -->
-
-          <div class="bus-line">
-            <div class="eastbound-bus">
-              <h3>124</h3>
-            </div>
-            <div class="direction">
-              <h3>Eastbound</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>8</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Arrives every 10 minutes</h2>
-            </div>
-            <div class="location">
-              <h3>Navy Pier</h3>
-            </div>
-          </div>
-
-          <div class="bus-line">
-            <div class="northbound-bus">
-              <h3>151</h3>
-            </div>
-            <div class="direction">
-              <h3>Northbound</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>10</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Arrives every 16 minutes</h2>
-            </div>
-            <div class="location">
-              <h3>Devon / Clark</h3>
-            </div>
-          </div>
-
-          <div class="bus-line">
-            <div class="southbound-bus">
-              <h3>J14</h3>
-            </div>
-            <div class="direction">
-              <h3>Southbound</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>10</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Arrives every 16 minutes</h2>
-            </div>
-            <div class="location">
-              <h3>Devon / Clark</h3>
-            </div>
-          </div>
-
-          <div class="bus-line">
-            <div class="southbound-bus">
-              <h3>124</h3>
-            </div>
-            <div class="direction">
-              <h3>Southbound</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>8</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Arrives every 10 minutes</h2>
-            </div>
-            <div class="location">
-              <h3>Navy Pier</h3>
-            </div>
-          </div>
-
-          <div class="bus-line">
-            <div class="eastbound-bus">
-              <h3>6x</h3>
-            </div>
-            <div class="direction">
-              <h3>Reroute</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>8</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Arrives every: N/A</h2>
-            </div>
-            <div class="location">
-              <h3>Jackson Park Express</h3>
-            </div>
-          </div>
-
-
-          <div class="bus-line">
-            <div class="northbound-bus">
-              <h3>4</h3>
-            </div>
-            <div class="direction">
-              <h3>Out of Service</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>N/A</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Resumes 12:10 AM</h2>
-            </div>
-            <div class="location">
-              <h3>Cottage Grove</h3>
-            </div>
-          </div>
-
-          <div class="bus-line">
-            <div class="southbound-bus">
-              <h3>20</h3>
-            </div>
-            <div class="direction">
-              <h3>Out of Service</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>N/A</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Resumes 12:10 AM</h2>
-            </div>
-            <div class="location">
-              <h3>Madison </h3>
-            </div>
-          </div>
-
-          <div class="bus-line">
-            <div class="eastbound-bus">
-              <h3>157</h3>
-            </div>
-            <div class="direction">
-              <h3>Out of Service</h3>
-            </div>
-            <div class="ETA">
-              <h3>Departs in</h3>
-              <br><h1>N/A</h1></br>
-              <h3>min</h3>
-            </div>
-            <div class="frequency">
-              <h2>Resumes 6:00 AM</h2>
-            </div>
-            <div class="location">
-              <h3>Streeterville / Taylor </h3>
-            </div>
+          <img class="map" src="images/map.png"
+        </div>
+        <div class ="station-title">
+          <h3>Washington / State Street</h3>
           </div>
 
 
 
-
+    <div class="bus-line">
+        <div class="eastbound-bus">
+            <h3>60</h3>
+        </div>
+        <div class="direction">
+            <h3>Eastbound</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>18</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Every 20 minutes</h2>
+        </div>
+        <div class="location">
+            <h3>Randolf / Harbour Dr</h3>
         </div>
 
 
+    </div>
+    <!--</section> -->
+
+    <div class="bus-line">
+        <div class="eastbound-bus">
+            <h3>124</h3>
+        </div>
+        <div class="direction">
+            <h3>Eastbound</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>8</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Every 10 minutes</h2>
+        </div>
+        <div class="location">
+            <h3>Navy Pier</h3>
+        </div>
+    </div>
+
+    <div class="bus-line">
+        <div class="northbound-bus">
+            <h3>151</h3>
+        </div>
+        <div class="direction">
+            <h3>Northbound</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>10</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Every 16 minutes</h2>
+        </div>
+        <div class="location">
+            <h3>Devon / Clark</h3>
+        </div>
+    </div>
+
+    <div class="bus-line">
+        <div class="southbound-bus">
+            <h3>J14</h3>
+        </div>
+        <div class="direction">
+            <h3>Southbound</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>8</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Every 16 minutes</h2>
+        </div>
+        <div class="location">
+            <h3>Devon / Clark</h3>
+        </div>
+    </div>
+
+    <div class="bus-line">
+        <div class="southbound-bus">
+            <h3>124</h3>
+        </div>
+        <div class="direction">
+            <h3>Southbound</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>8</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Every 10 minutes</h2>
+        </div>
+        <div class="location">
+            <h3>Navy Pier</h3>
+        </div>
+    </div>
+
+    <div class="bus-line">
+        <div class="reroute-bus">
+            <h3>6x</h3>
+        </div>
+        <div class="direction">
+            <h3>Reroute</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>8</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Arrives every: n/a</h2>
+        </div>
+        <div class="location">
+            <h3>Jackson Park Express</h3>
+        </div>
+    </div>
 
 
-          </div>
+    <div class="bus-line">
+        <div class="northbound-bus">
+            <h3>4</h3>
+        </div>
+        <div class="direction">
+            <h3>Out of Service</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>n/a</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Resumes 12:10 AM</h2>
+        </div>
+        <div class="location">
+            <h3>Cottage Grove</h3>
+        </div>
+    </div>
 
-          </div>
-          <div>
-            <img class="tab-bar-1" src="images/tab-bar-1.png"
-          </div>
-      </section>
+    <div class="bus-line">
+        <div class="southbound-bus">
+            <h3>20</h3>
+        </div>
+        <div class="direction">
+            <h3>Out of Service</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>n/a</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Resumes 12:10 AM</h2>
+        </div>
+        <div class="location">
+            <h3>Madison </h3>
+        </div>
+    </div>
 
-
-      </div>
-
-
-
-  </body>
-</html>
+    <div class="bus-line">
+        <div class="eastbound-bus">
+            <h3>157</h3>
+        </div>
+        <div class="direction">
+            <h3>Out of Service</h3>
+        </div>
+        <div class="eta">
+            <h3>Arriving in</h3>
+            <p>
+                <h1>n/a</h1>
+                <h2>min</h2>
+        </div>
+        <div class="frequency">
+            <h2>Resumes 6:00 AM</h2>
+        </div>
+        <div class="location">
+            <h3>Streeterville / Taylor </h3>
+        </div>
+    </div>
+    <section>
+        <div>
+            <img class="tab-bar" src="images/tab-bar.png" </div>
+        </section>
+    </section>
+</body>
