removed unnecessary div

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 </head>
 <body>
     <section class="container">
-        <div>
-            <img class="status-bar" src="images/status-bar.png" </div>
-
-      <div>
-          <img class="map" src="images/map.png"
-        </div>
+            <img class="status-bar" src="images/status-bar.png">
+            <img class="map" src="images/map.png">
         <div class ="station-title">
           <h3>Washington / State Street</h3>
           </div>
