Updated delay not to match visual design

--- a/index.html
+++ b/index.html
@@ -47,27 +47,17 @@
                 <span class="bus-number">151</span>
                 <span class="direction">Northbound</span>
                 <span class="eta-single">
-                    <h1>5</h1>
+                    <h1>9</h1>
                     <h2>min</h2>
                 </span>
-                <span class="frequency">Every 16 minutes</span>
+                <span class="frequency">Every 16 minutes<span style="color: #F48B0F"> (Delayed 4 min)</span></span>
                 <span class="location">Devon / Clark</span>
 
             </li>
             <li>
 
-                <span class="bus-number">J14</span>
-                <span class="direction">Southbound</span>
-                <span class="eta-single">
-                    <h1>4</h1>
-                    <h2>min</h2>
-                </span>
-                <span class="frequency">Every 15 minutes</span>
-                <span class="location">Devon / Clark</span>
 
 
-            </li>
-            <li>
                 <span class="bus-number">124</span>
                 <span class="direction">Southbound</span>
                 <span class="eta-single">
@@ -76,6 +66,17 @@
                 </span>
                 <span class="frequency">Every 10 minutes</span>
                 <span class="location">Navy Pier</span>
+            </li>
+            <li>
+              <span class="bus-number">J14</span>
+              <span class="direction">Southbound</span>
+              <span class="eta-single">
+                  <h1>4</h1>
+                  <h2>min</h2>
+              </span>
+              <span class="frequency">Every 15 minutes</span>
+              <span class="location">Devon / Clark</span>
+
             </li>
             <li>
                 <span class="bus-number">6x</span>
